# quefrency

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml  mirroring.yaml  publish_release.yml
app/: Cargo.toml
app/benches/general/: main.rs
app/src/: main.rs
fuzz/: Cargo.toml
fuzz/double_precision/: double_precision.rs
fuzz/single_precision/: single_precision.rs
src/: basic_converter.rs  default_plan.rs  err.rs  lib.rs  mla.rs
src/avx/: converter_f32.rs  lnf.rs  mod.rs
src/neon/: converter_f32.rs  lnf.rs  mod.rs
