[workspace]
members = ["app"]
exclude = ["fuzz"]

[package]
name = "quefrency"
version = "0.1.0"
edition = "2024"
description = "Computing cepstrum"
readme = "./README.md"
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/quefrency"
keywords = ["cepstrum", "quefrency", "dsp", "signal-processing"]
categories = ["science", "algorithms"]
homepage = "https://github.com/awxkee/quefrency"
repository = "https://github.com/awxkee/quefrency.git"
exclude = ["*.jpg", "./assets/*", "*.png"]
rust-version = "1.90.0"
include = ["/src/", "/README.md", "/LICENSE.md", "/LICENSE-APACHE.md"]

[dependencies]
zaft = "0.3.5"
num-traits = "0.2.19"
num-complex = "0.4.6"
pxfm = "0.1.28"

[features]
default = ["neon", "avx"]
neon = []
avx = []

[dev-dependencies]
rand = "0.10.0"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]